--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     "unidecode": "0.1.8",
     "uuid": "3.2.1",
     "validator": "6.3.0",
-    "xml": "1.0.1"
+    "xml": "1.0.1",
+    "ghost-qn-store": "4.0.0"
   },
   "optionalDependencies": {
     "sqlite3": "3.1.13"
